[metadata]
name = rpg_pygame
version = 0.1.0
description = a python 2d top down rpg engine around pygame
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sh1457/rpg-pygame
author = Sujith Sudarshan
author_email = sh1457@gmail.com
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Source = https://github.com/sh1457/rpg-pygame

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    pygame
python_requires = >=3.8

#[options.extras_require]
