[metadata]
name = bindu
version = 0.1.0
description = a python 2d top down rpg engine around pygame
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sh1457/bindu
author = Sujith Sudarshan
author_email = sh1457@gmail.com
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/sh1457/bindu

[options]
zip_safe = False
package_dir=
    =src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pygame
python_requires = >=3.10

[options.packages.find]
where=src

#[options.extras_require]
